binrw/tests/ui/bad_parse_with_fn.stderr
error[E0618]: expected function, found `{integer}`
 --> $DIR/bad_parse_with_fn.rs:4:10
  |
4 | #[derive(BinRead)]
  |          ^^^^^^^
  |          |
  |          call expression requires function
  |          `__binrw_generated_read_function` has type `{integer}`
  |
  = note: this error originates in the derive macro `BinRead` (in Nightly builds, run with -Z macro-backtrace for more info)
